--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-query": "^3.34.8",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-scroll": "^1.8.4",
         "react-slick": "^0.28.1",
