--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "react-westbmusic-wcommerse-website",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "react-westbmusic-wcommerse-website",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "cd ./api && npm run start",
+        "dev": "concurrently \"cd api && npm run start\" \"cd client && npm start\"",
+        "format": "prettier --write 'client/*.js' 'api/*.js'"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "concurrently": "^7.0.0"
+    }
 }
