--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,11 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^11.0.0",
+        "express": "^4.17.2",
+        "mongoose": "^6.1.6"
+    }
 }
