--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,11 @@
         "@types/styled-components": "^5.1.19",
         "components": "^0.1.0",
         "hamburger-react": "^2.4.1",
+        "howler": "^2.2.3",
         "react": "^17.0.2",
+        "react-audio-player": "^0.17.0",
         "react-dom": "^17.0.2",
+        "react-h5-audio-player": "^3.8.1",
         "react-icons": "^4.3.1",
         "react-query": "^3.34.8",
         "react-router-dom": "^6.2.1",
@@ -60,6 +63,7 @@
         ]
     },
     "devDependencies": {
+        "@types/howler": "^2.2.4",
         "@types/react-scroll": "^1.8.3",
         "@types/react-slick": "^0.23.8"
     }
