--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.1",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "dotenv": "^11.0.0",
         "express": "^4.17.2",
-        "mongoose": "^6.1.6"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.1.6",
+        "multer": "^1.4.4",
+        "stripe": "^8.197.0"
     }
 }
