--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@types/styled-components": "^5.1.19",
+        "axios": "^0.24.0",
         "components": "^0.1.0",
         "hamburger-react": "^2.4.1",
         "howler": "^2.2.3",
