--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
         "@types/styled-components": "^5.1.19",
         "axios": "^0.24.0",
         "components": "^0.1.0",
+        "firebase": "^9.6.3",
         "hamburger-react": "^2.4.1",
         "howler": "^2.2.3",
         "react": "^17.0.2",
@@ -32,6 +33,7 @@
         "react-scroll": "^1.8.4",
         "react-select": "^5.2.2",
         "react-slick": "^0.28.1",
+        "react-stripe-checkout": "^2.6.3",
         "slick-carousel": "^1.8.1",
         "styled": "^1.0.0",
         "styled-components": "^5.3.3",
