--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@crystallize/node-vipps": "^0.1.4",
         "body-parser": "^1.19.1",
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
